modifications page contact/accueil responsive

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,7 @@
 ExpiresActive On
 ExpiresDefault "access plus 1 years"
 ExpiresByType image/jpg "access plus 1 year"
+ExpiresByType image/png "access plus 1 year"
 ExpiresByType image/svg "access plus 1 year"
 ExpiresByType image/avif "access plus 1 year"
 ExpiresByType image/webp "access plus 1 year"
